--- a/1.5.0/amd64/packages/autoware-localrepo/debian/control
+++ b/1.5.0/amd64/packages/autoware-localrepo/debian/control
@@ -1,4 +1,4 @@
-Source: autoware-localrepo
+Source: autoware-localrepo-1-5-0
 Section: misc
 Priority: optional
 Maintainer: Jerry Lin <jerry73204@gmail.com>
