--- a/1.5.0/jp62/packages/autoware-theme/debian/control
+++ b/1.5.0/jp62/packages/autoware-theme/debian/control
@@ -1,4 +1,4 @@
-Source: autoware-theme
+Source: autoware-theme-1-5-0
 Section: misc
 Priority: optional
 Maintainer: Jerry Lin <jerry73204@gmail.com>
